; ModuleID = '/home/carl/AnghaBench/tmux/extr_alerts.c_alerts_check_all.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_alerts.c_alerts_check_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.window*)* @alerts_check_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alerts_check_all(%struct.window* %0) #0 {
  %2 = alloca %struct.window*, align 8
  %3 = alloca i32, align 4
  store %struct.window* %0, %struct.window** %2, align 8
  %4 = load %struct.window*, %struct.window** %2, align 8
  %5 = call i32 @alerts_check_bell(%struct.window* %4)
  store i32 %5, i32* %3, align 4
  %6 = load %struct.window*, %struct.window** %2, align 8
  %7 = call i32 @alerts_check_activity(%struct.window* %6)
  %8 = load i32, i32* %3, align 4
  %9 = or i32 %8, %7
  store i32 %9, i32* %3, align 4
  %10 = load %struct.window*, %struct.window** %2, align 8
  %11 = call i32 @alerts_check_silence(%struct.window* %10)
  %12 = load i32, i32* %3, align 4
  %13 = or i32 %12, %11
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @alerts_check_bell(%struct.window*) #1

declare dso_local i32 @alerts_check_activity(%struct.window*) #1

declare dso_local i32 @alerts_check_silence(%struct.window*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
